migration from java.util.logging to slf4j (work in progress)